--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@reduxjs/toolkit": "^2.5.1",
     "@tailwindcss/vite": "^4.0.9",
+    "@tanstack/react-query": "^5.68.0",
     "axios": "^1.8.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "framer-motion": "^12.0.6",
     "lucide-react": "^0.473.0",
+    "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-calendar": "^5.1.0",
     "react-day-picker": "^8.10.1",
@@ -46,12 +48,14 @@
     "react-router": "^7.1.3",
     "react-router-dom": "^7.1.3",
     "recharts": "^2.15.1",
+    "sonner": "^2.0.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.18.0",
+    "@tanstack/eslint-plugin-query": "^5.68.0",
     "@types/node": "^22.10.7",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
