--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,9 +26,10 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tailwindcss/vite": "^4.0.17",
-    "@tanstack/react-query": "^5.69.3",
-    "@trpc/client": "^11.0.1",
+    "@tanstack/react-query": "^5.71.10",
+    "@trpc/client": "^11.0.2",
     "@trpc/react-query": "^11.0.1",
+    "@trpc/tanstack-react-query": "^11.0.2",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -43,7 +44,6 @@
     "react-error-boundary": "^5.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
-    "react-query": "^3.39.3",
     "react-router": "^7.4.0",
     "recharts": "^2.15.1",
     "sonner": "^2.0.2",
