--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "name": "ggecl-deploy",
+  "packageManager": "pnpm@10.7.1",
+  "engines": {
+    "node": "23.x"
+  },
   "version": "1.0.0",
   "private": true,
   "workspaces": [
