cart functionalities added

--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "backend",
     "frontend"
   ],
+  "scripts": {
+    "dev": "pnpm run -r --parallel --aggregate-output dev"
+  },
   "dependencies": {
     "@trpc/server": "^11.0.2"
   },
