--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "frontend"
   ],
   "scripts": {
-    "dev": "pnpm run -r --parallel --aggregate-output dev"
+    "dev": "pnpm run -r --parallel --aggregate-output dev",
+    "build": "pnpm run -r build"
   },
   "dependencies": {
     "@trpc/server": "^11.0.2"
