--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "build": "pnpm run -r build"
   },
   "dependencies": {
-    "@trpc/server": "^11.0.2"
+    "@trpc/server": "^11.0.2",
+    "superjson": "^2.2.2"
   },
   "pnpm": {
     "peerDependencyRules": {
