half way admin auth

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -27,3 +27,6 @@ REDIRECT_URI=https://developers.google.com/oauthplayground
 REDIS_URL=redis://redis:6379
 
 NOSENDMAIL=true
+
+SUPERADMIN_EMAIL=your@superadmin.email
+SUPERADMIN_PASSWORD=your_secure_password
