--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
     "@vercel/node": "^5.1.14",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
+    "bullmq": "^5.48.1",
     "compression": "^1.8.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
