--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,6 +51,7 @@
     "react-loading-skeleton": "^3.5.0",
     "react-router": "^7.4.0",
     "recharts": "^2.15.1",
+    "socket.io-client": "^4.8.1",
     "sonner": "^2.0.2",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.17",
