--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,6 +51,7 @@
     "react-loading-skeleton": "^3.5.0",
     "react-query": "^3.39.3",
     "react-router": "^7.4.0",
+    "react-router-dom": "^7.5.0",
     "recharts": "^2.15.1",
     "socket.io-client": "^4.8.1",
     "sonner": "^2.0.2",
