build errors fixed

--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "tsc",
     "dev": "tsx watch src/local.ts",
-    "start": "node dist/server.js"
+    "start": "node dist/server.js",
+    "type:check": "tsc --noEmit"
   },
   "keywords": [],
   "author": "",
