--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "dev": "tsx watch src/local.ts",
-    "start": "node dist/server.js",
+    "start": "node dist/index.js",
     "type:check": "tsc --noEmit"
   },
   "keywords": [],
