--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "dev": "tsx watch src/local.ts",
+    "dev": "tsx watch src/index.ts",
     "start": "node dist/index.js",
     "type:check": "tsc --noEmit"
   },
